view + produttore, distributore, trasformatore refactoring - springboot